sumo/tests/duarouter/trips/errors/vehicle_false_arrivalspeed/errors.duarouter
Error: Invalid arrivalSpeed definition for vehicle '';
 must be one of ("current", or a float>=0)
Quitting (on error).
